overflow album fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -451,7 +451,7 @@ body {
    top: -2rem;
    transition: all .3s ease-in;
    max-height: 500px;
-   overflow: hidden;
+   overflow-y: hidden;
 }
 
 #metadata {
@@ -618,6 +618,7 @@ input[type="checkbox"]:checked~.menuIconToggle {
    #webamp {
       top: 0;
       height: fit-content;
+      overflow: revert;
 
       #albumArt {
          max-width: 100vw;
